--- a/centroayudalog.html
+++ b/centroayudalog.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Política de Privacidad</title>
+<title>Centro de Ayuda</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
@@ -51,8 +51,8 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
         <a class="navbar-brand" href="#">
             <img src="img/logo.png" class="logo-redondeado" alt="" width="40" height="40">
         </a>
@@ -62,15 +62,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                    <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                        <i class="fa-solid fa-house"></i>
-                        <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
-                    </div>
+            <li class="nav-item">
+                <a class="nav-link" href="indexusuario.html">
+                <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
+                    <i class="fa-solid fa-house"></i>
+                    <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+                </div>
                 </a>
-                </li>
-                <li class="nav-item dropdown">
+            </li>
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa-solid fa-rectangle-list"></i>
@@ -84,112 +84,104 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                     <li>
-                        <a class="dropdown-item" href="mantencionMotor.html">
+                    <a class="dropdown-item" href="mantencionMotorlog.html">
                         <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-gauge-simple-high"></i>
-                            <span class="ms-2">Motor</span>
+                        <i class="fa-solid fa-gauge-simple-high"></i>
+                        <span class="ms-2">Motor</span>
                         </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="mantencionFrenos.html">
-                        <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-car-burst"></i>
-                            <span class="ms-2">Frenos</span> 
-                        </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="mantencionTransmision.html">
-                        <div>
-                            <i class="fa-solid fa-oil-can"></i>
-                            <span class="ms-2">Transmisión</span>
-                        </div>
-                        </a>
-                    </li>
-                    </ul>
-                </li>
-                <li class="dropdown-submenu">
-                    <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-screwdriver-wrench"></i>
-                    Mecánicos
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+                    </li>
                     <li>
-                        <a class="dropdown-item" href="mecanico1.html">
+                    <a class="dropdown-item" href="mantencionFrenoslog.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-car-burst"></i>
+                        <span class="ms-2">Frenos</span> 
+                        </div>
+                    </a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" href="mantencionTransmisionlog.html">
+                        <div>
+                        <i class="fa-solid fa-oil-can"></i>
+                        <span class="ms-2">Transmisión</span>
+                        </div>
+                    </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                Mecánicos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+                    <li>
+                    <a class="dropdown-item" href="mecanico1log.html">
                         <div class="d-flex align-items-center"> 
                             <i class="fa-solid fa-user"></i>
                             <span class="ms-2">Marcelo  Pino</span> 
                         </div>
-                        </a>
+                    </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="mecanico2.html">
+                    <a class="dropdown-item" href="mecanico2log.html">
                         <div class="d-flex align-items-center"> 
                             <i class="fa-solid fa-user"></i>
                             <span class="ms-2">Daniel Álvarez</span> 
                         </div>
-                        </a>
+                    </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="mecanico3.html">
+                    <a class="dropdown-item" href="mecanico3log.html">
                         <div class="d-flex align-items-center"> 
                             <i class="fa-solid fa-user"></i>
                             <span class="ms-2">Carlos Echeverría</span> 
                         </div>
-                        </a>
-                    </li>
-                    </ul>
-                </li>
-            </ul>
-                <li class="nav-item">
-                <a class="nav-link" href="contacto.html">
-                    <div class="d-flex align-items-center"> 
-                        <i class="fa-solid fa-message"></i>
-                        <span class="ms-2">Contacto</span> 
-                    </div>
-                </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-user"></i>
-                    Usuario
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
-                        <li>
-                        <a class="dropdown-item" href="#">
-                            <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-address-card"></i>
-                            <span class="ms-2">Perfil</span> 
-                            </div>
-                        </a>
-                        </li>
-                        <li>
-                        <a class="dropdown-item" href="#">
-                            <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-gear"></i>
-                            <span class="ms-2">Configuración</span> 
-                            </div>
-                        </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="index.html">
-                                <div class="d-flex align-items-center">
-                                <i class="fa-solid fa-right-from-bracket"></i>
-                                <span class="ms-2">Cerrar Sesión</span> 
-                                </div>
-                        </a>
-                        </li>
+                    </li>
                 </ul>
+            </li>
             </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="contactolog.html">
+                <div class="d-flex align-items-center"> 
+                    <i class="fa-solid fa-message"></i>
+                    <span class="ms-2">Contacto</span> 
+                </div>
+                </a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-user"></i>
+                Usuario
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
+                    <li>
+                    <a class="dropdown-item" href="perfil.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-address-card"></i>
+                        <span class="ms-2">Perfil</span> 
+                        </div>
+                    </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="index.html">
+                            <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                            <span class="ms-2">Cerrar Sesión</span> 
+                            </div>
+                    </a>
+                    </li>
+            </ul>
+        </ul>
             <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
         </div>
-    </div>
-</nav>
+        </div>
+    </nav>
 
 <div id="cover-search"></div>
 <video autoplay muted loop id="videoFondo">
@@ -199,69 +191,74 @@
 <div class="container mantencion-caja">
     <h1 style="color: white;">
         <br>
-        Política de Privacidad - Taller Mecánico "Rayo Makween"
+        Centro de Ayuda - Taller Mecánico "Rayo Makween"
     </h1>
     <br>
     <ul class="list-group">
-    <li class="list-group-item">
-        <p>
-            Esta Política de Privacidad describe cómo "Rayo Makween" recopila, utiliza y protege la información personal que proporcionas al utilizar nuestro sitio web o al interactuar con nuestro taller de servicios mecánicos.
-        </p><hr>
-        <h5 class="mb-3">1. Información que Recopilamos</h5>
-        <ul>
-            <li>
-                Este sitio web está destinado para proporcionar información sobre los servicios ofrecidos por el    taller mecánico "Rayo Makween" y para permitir a los usuarios contactar con nosotros para obtener más detalles o programar citas de servicio.
-            </li>
-            <li>
-                Información de Uso: Podemos recopilar información sobre cómo utilizas nuestro sitio web, como el navegador web que utilizas, las páginas que visitas y la duración de tu visita.
-            </li>
-        </ul>
-        <h5 class="mb-3">2. Uso de la Información</h5>
-        <ul>
-            <li>
-                Utilizamos la información que recopilamos para proporcionar y mejorar nuestros servicios, responder a tus consultas, procesar citas de servicio y enviar comunicaciones relacionadas con tu solicitud.
-            </li>
-            <li>
-                No compartimos tu información personal con terceros, excepto cuando sea necesario para cumplir con las leyes aplicables o con tu consentimiento explícito.
-            </li>
-        </ul>
-        <h5 class="mb-3">3. Cookies y Tecnologías Similares</h5>
-        <ul>
-            <li>
-                Utilizamos cookies y tecnologías similares para mejorar la experiencia del usuario en nuestro sitio web y recopilar información sobre el uso del sitio. Puedes configurar tu navegador para que rechace todas las cookies o para que te avise cuando se envíe una cookie.
-            </li>
-        </ul>
-        <h5 class="mb-3">4. Seguridad de la Información</h5>
-        <ul>
-            <li>
-                Implementamos medidas de seguridad para proteger la información personal que recopilamos contra el acceso no autorizado, la divulgación o la destrucción.
-            </li>
-            <li>
-                Sin embargo, no podemos garantizar la seguridad absoluta de la información transmitida a través de Internet, y por lo tanto, cualquier transmisión de información es bajo tu propio riesgo.
-            </li>
-        </ul>
-        <h5 class="mb-3">5. Cambios en la Política de Privacidad</h5>
-        <ul>
-            <li>
-                Nos reservamos el derecho de actualizar o modificar esta Política de Privacidad en cualquier momento. Cualquier cambio significativo será notificado en nuestro sitio web o por otros medios antes de que entre en vigencia.
-            </li>
-        </ul>
-        <h5 class="mb-3">6. Consentimiento</h5>
-        <ul>
-            <li>
-                Utilizamos la información que recopilamos para proporcionar y mejorar nuestros servicios, responder a tus consultas, procesar citas de servicio y enviar comunicaciones relacionadas con tu solicitud.
-            </li>
-            <li>
-                Al utilizar nuestro sitio web o proporcionarnos tu información personal, aceptas los términos de esta Política de Privacidad y consientes el tratamiento de tu información según lo descrito aquí.
-            </li>
-        </ul>
-        <h5 class="mb-3">7. Contacto</h5>
-        <ul>
-            <li>
-                Si tienes alguna pregunta o inquietud sobre nuestra Política de Privacidad o sobre cómo tratamos tu información personal, por favor contáctanos a través de la información de contacto proporcionada o en el apartado Contacto de nuestro sitio web.
-            </li>
-        </ul>
-    </li>
+        <li class="list-group-item">
+            <p>
+                ¡Bienvenido al Centro de Ayuda de Rayo Makween! Aquí encontrarás respuestas a preguntas frecuentes y recursos útiles para sacar el máximo provecho de nuestros servicios mecánicos.
+            </p><hr>
+            <h5 class="mb-3">Preguntas Frecuentes</h5>
+            <ul>
+                <li>
+                    <h5 class="mb-3">¿Cuáles son sus horas de operación?</h5>
+                    Nuestro taller está abierto de lunes a viernes de 8:00 a.m. a 6:00 p.m. y los sábados de 9:00 a.m. a 3:00 p.m. ¡Estamos aquí para atenderte!
+                </li>
+                <li>
+                    <h5 class="mb-3">¿Ofrecen servicios de mantenimiento preventivo?</h5>
+                    Sí, ofrecemos una variedad de servicios de mantenimiento preventivo para mantener tu vehículo en óptimas condiciones. Desde cambios de aceite hasta inspecciones de frenos, ¡cuenta con nosotros!
+                </li>
+                <li>
+                    <h5 class="mb-3">¿Cómo puedo programar una cita de servicio?</h5>
+                    Puedes programar una cita de servicio llamando a nuestro número de teléfono o utilizando nuestro formulario en línea. Uno de nuestros representantes se comunicará contigo para confirmar la cita.
+                </li>
+                <li>
+                    <h5 class="mb-3">¿Cuánto tiempo tarda en completarse un servicio?</h5>
+                    El tiempo necesario para completar un servicio puede variar según la naturaleza del trabajo. Te proporcionaremos una estimación del tiempo de servicio al programar tu cita.
+                </li>
+            </ul>
+            <hr>
+            <br>
+            <h5 class="mb-3">Recursos Útiles</h5>
+            <ul>
+                <li>
+                    <h5 class="mb-3">Guía de Mantenimiento del Vehículo</h5>
+                    Descarga nuestra guía de mantenimiento del vehículo para obtener consejos útiles sobre cómo cuidar y mantener tu automóvil en condiciones óptimas.
+                </li>
+                <li>
+                    <h5 class="mb-3">Consejos para Conducir Seguro</h5>
+                    Aprende sobre las mejores prácticas de conducción y seguridad en la carretera con nuestros consejos para conducir seguro. ¡Tu seguridad es nuestra prioridad!
+                </li>
+                <li>
+                    <h5 class="mb-3">Artículos y Noticias</h5>
+                    Mantente al día con las últimas noticias y consejos de la industria automotriz en nuestro blog. Encuentra artículos interesantes sobre mantenimiento de vehículos, nuevas tecnologías y más.
+                </li>
+            </ul>
+            <hr>
+            <br>
+            <h5 class="mb-3">Contáctanos</h5>
+            <ul>
+                    <p>
+                        Si tienes alguna pregunta adicional o necesitas asistencia, no dudes en contactarnos. Estamos aquí para ayudarte en todo lo que necesites.
+                    </p>
+                    <div class="mb-3">
+                        <img src="https://png.pngtree.com/png-clipart/20190630/original/pngtree-vector-phone-cell-icon-png-image_4162803.jpg" width="20" height="20" alt="Teléfono" class="contacto-icono"> 
+                        +56 2 2345 6789
+                    </div>
+                    <div>
+                        <img src="https://static.vecteezy.com/system/resources/previews/000/564/377/original/email-symbol-icon-vector.jpg" width="20" height="20" alt="Correo" class="contacto-icono"> 
+                        makweenrayo@gmail.com
+                    </div>
+                    <div class="mb-3">
+                        <img src="https://static.vecteezy.com/system/resources/previews/000/331/674/original/vector-location-icon.jpg" width="20" height="20" alt="Ubicación" class="contacto-icono">
+                        Avenida Providencia #2150, Providencia, Santiago, Chile
+                    </div>
+                    <p>
+                        ¡Gracias por elegir Rayo Makween para tus necesidades de servicio automotriz!
+                    </p>
+            </ul>
+        </li>
     </ul>
 </div>
 <br>
