--- a/politicaprivacidadlog.html
+++ b/politicaprivacidadlog.html
@@ -51,8 +51,8 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
         <a class="navbar-brand" href="#">
             <img src="img/logo.png" class="logo-redondeado" alt="" width="40" height="40">
         </a>
@@ -62,15 +62,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                    <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                        <i class="fa-solid fa-house"></i>
-                        <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
-                    </div>
+            <li class="nav-item">
+                <a class="nav-link" href="indexusuario.html">
+                <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
+                    <i class="fa-solid fa-house"></i>
+                    <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+                </div>
                 </a>
-                </li>
-                <li class="nav-item dropdown">
+            </li>
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fa-solid fa-rectangle-list"></i>
@@ -84,112 +84,104 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                     <li>
-                        <a class="dropdown-item" href="mantencionMotor.html">
+                    <a class="dropdown-item" href="mantencionMotorlog.html">
                         <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-gauge-simple-high"></i>
-                            <span class="ms-2">Motor</span>
+                        <i class="fa-solid fa-gauge-simple-high"></i>
+                        <span class="ms-2">Motor</span>
                         </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="mantencionFrenos.html">
-                        <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-car-burst"></i>
-                            <span class="ms-2">Frenos</span> 
-                        </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="mantencionTransmision.html">
-                        <div>
-                            <i class="fa-solid fa-oil-can"></i>
-                            <span class="ms-2">Transmisión</span>
-                        </div>
-                        </a>
-                    </li>
-                    </ul>
-                </li>
-                <li class="dropdown-submenu">
-                    <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-screwdriver-wrench"></i>
-                    Mecánicos
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+                    </li>
                     <li>
-                        <a class="dropdown-item" href="mecanico1.html">
+                    <a class="dropdown-item" href="mantencionFrenoslog.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-car-burst"></i>
+                        <span class="ms-2">Frenos</span> 
+                        </div>
+                    </a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" href="mantencionTransmisionlog.html">
+                        <div>
+                        <i class="fa-solid fa-oil-can"></i>
+                        <span class="ms-2">Transmisión</span>
+                        </div>
+                    </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                Mecánicos
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+                    <li>
+                    <a class="dropdown-item" href="mecanico1log.html">
                         <div class="d-flex align-items-center"> 
                             <i class="fa-solid fa-user"></i>
                             <span class="ms-2">Marcelo  Pino</span> 
                         </div>
-                        </a>
+                    </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="mecanico2.html">
+                    <a class="dropdown-item" href="mecanico2log.html">
                         <div class="d-flex align-items-center"> 
                             <i class="fa-solid fa-user"></i>
                             <span class="ms-2">Daniel Álvarez</span> 
                         </div>
-                        </a>
+                    </a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="mecanico3.html">
+                    <a class="dropdown-item" href="mecanico3log.html">
                         <div class="d-flex align-items-center"> 
                             <i class="fa-solid fa-user"></i>
                             <span class="ms-2">Carlos Echeverría</span> 
                         </div>
-                        </a>
-                    </li>
-                    </ul>
-                </li>
-            </ul>
-                <li class="nav-item">
-                <a class="nav-link" href="contacto.html">
-                    <div class="d-flex align-items-center"> 
-                        <i class="fa-solid fa-message"></i>
-                        <span class="ms-2">Contacto</span> 
-                    </div>
-                </a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-solid fa-user"></i>
-                    Usuario
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
-                        <li>
-                        <a class="dropdown-item" href="#">
-                            <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-address-card"></i>
-                            <span class="ms-2">Perfil</span> 
-                            </div>
-                        </a>
-                        </li>
-                        <li>
-                        <a class="dropdown-item" href="#">
-                            <div class="d-flex align-items-center">
-                            <i class="fa-solid fa-gear"></i>
-                            <span class="ms-2">Configuración</span> 
-                            </div>
-                        </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="index.html">
-                                <div class="d-flex align-items-center">
-                                <i class="fa-solid fa-right-from-bracket"></i>
-                                <span class="ms-2">Cerrar Sesión</span> 
-                                </div>
-                        </a>
-                        </li>
+                    </li>
                 </ul>
+            </li>
             </ul>
+            <li class="nav-item">
+                <a class="nav-link" href="contactolog.html">
+                <div class="d-flex align-items-center"> 
+                    <i class="fa-solid fa-message"></i>
+                    <span class="ms-2">Contacto</span> 
+                </div>
+                </a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-user"></i>
+                Usuario
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
+                    <li>
+                    <a class="dropdown-item" href="perfil.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-address-card"></i>
+                        <span class="ms-2">Perfil</span> 
+                        </div>
+                    </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="index.html">
+                            <div class="d-flex align-items-center">
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                            <span class="ms-2">Cerrar Sesión</span> 
+                            </div>
+                    </a>
+                    </li>
+            </ul>
+        </ul>
             <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
         </div>
-    </div>
-</nav>
+        </div>
+    </nav>
 
 <div id="cover-search"></div>
 <video autoplay muted loop id="videoFondo">
