--- a/login.html
+++ b/login.html
@@ -22,41 +22,50 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-                <div class="center" id="login">
-                    <h1 class="text-center">Iniciar Sesion</h1>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-4">
+            <div class="center" id="login">
+                <h1 class="text-center">Iniciar Sesion</h1>
+                <br>
+                <form method="post" action="" id="logins">
+                    <div class="txt_field">
+                        <input type="text" id="nombre" minlength="4" maxlength="12" required>
+                        <label for="nombre">Username</label>
+                    </div>
+                    <div class="txt_field">
+                        <input type="password" id="password" minlength="4" maxlength="12" required>
+                        <span class="error"></span>
+                        <label for="password">Password</label>
+                    </div>
+                    <div class="pass">Forgot Password?</div>
                     <br>
-                    <form method="post" action="" id="logins">
-                        <div class="txt_field">
-                            <input type="text" id="nombre" minlength="4" maxlength="12" required>
-                            <label for="nombre">Username</label>
-                        </div>
-                        <div class="txt_field">
-                            <input type="password" id="password" minlength="4" maxlength="12" required>
-                            <span class="error"></span>
-                            <label for="password">Password</label>
-                        </div>
-                        <div class="pass">Forgot Password?</div>
-                        <br>
-                        <div class="text-center">
-                            <input class="log-btn" id="log-btn" type="submit" value="Login">
-                        </div>
-                    </form>
-                    <div class="signup_link text-center">
-                        No estas Registrado? <a href="formulario.html">Registrarse</a>
+                    <div class="text-center">
+                        <input class="log-btn" id="log-btn" type="submit" value="Login">
                     </div>
-                    <div class="volver text-center">
-                        <a href="index.html">Volver a Inicio</a>
-                    </div>
-                    <div id="error"></div>
+                </form>
+                <div class="signup_link text-center">
+                    No estas Registrado? <a href="formulario.html">Registrarse</a>
                 </div>
+                <div class="volver text-center">
+                    <a href="index.html">Volver a Inicio</a>
+                </div>
+                <div id="error"></div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-</body>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const form = document.getElementById("logins");
 
+        form.addEventListener("submit", function(event) {
+            event.preventDefault();
+            window.location.href = "indexusuario.html";
+        });
+    });
+</script>
+</body>
 </html>
