--- a/mantencionMotorlog.html
+++ b/mantencionMotorlog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mantención Frenos</title>
+  <title>Mantención Motor</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
@@ -46,6 +46,7 @@
       z-index: 999; /* Asegura que esté detrás del cuadro de búsqueda */
       display: none; /* Ocultar inicialmente */
     }
+
   </style>
 </head>
 
@@ -61,15 +62,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                  <i class="fa-solid fa-house"></i>
-                  <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="indexusuario.html">
+            <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
+                <i class="fa-solid fa-house"></i>
+                <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+            </div>
             </a>
-          </li>
-          <li class="nav-item dropdown">
+        </li>
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-rectangle-list"></i>
@@ -83,73 +84,73 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mantencionMotor.html">
+                <a class="dropdown-item" href="mantencionMotorlog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-gauge-simple-high"></i>
-                      <span class="ms-2">Motor</span>
+                    <i class="fa-solid fa-gauge-simple-high"></i>
+                    <span class="ms-2">Motor</span>
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionFrenos.html">
+                <a class="dropdown-item" href="mantencionFrenoslog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-car-burst"></i>
-                      <span class="ms-2">Frenos</span> 
+                    <i class="fa-solid fa-car-burst"></i>
+                    <span class="ms-2">Frenos</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionTransmision.html">
+                <a class="dropdown-item" href="mantencionTransmisionlog.html">
                     <div>
-                      <i class="fa-solid fa-oil-can"></i>
-                      <span class="ms-2">Transmisión</span>
+                    <i class="fa-solid fa-oil-can"></i>
+                    <span class="ms-2">Transmisión</span>
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
-          <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-screwdriver-wrench"></i>
-              Mecánicos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+            </ul>
+        </li>
+        <li class="dropdown-submenu">
+            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            Mecánicos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mecanico1.html">
+                <a class="dropdown-item" href="mecanico1log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Marcelo  Pino</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico2.html">
+                <a class="dropdown-item" href="mecanico2log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Daniel Álvarez</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico3.html">
+                <a class="dropdown-item" href="mecanico3log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Carlos Echeverría</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
+            </ul>
+        </li>
         </ul>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">
-              <div class="d-flex align-items-center"> 
-                  <i class="fa-solid fa-message"></i>
-                  <span class="ms-2">Contacto</span> 
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="contactolog.html">
+            <div class="d-flex align-items-center"> 
+                <i class="fa-solid fa-message"></i>
+                <span class="ms-2">Contacto</span> 
+            </div>
             </a>
-          </li>
-          <li class="nav-item dropdown">
+        </li>
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user"></i>
@@ -157,18 +158,10 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
                 <li>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="perfil.html">
                     <div class="d-flex align-items-center">
                     <i class="fa-solid fa-address-card"></i>
                     <span class="ms-2">Perfil</span> 
-                    </div>
-                </a>
-                </li>
-                <li>
-                <a class="dropdown-item" href="#">
-                    <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-gear"></i>
-                    <span class="ms-2">Configuración</span> 
                     </div>
                 </a>
                 </li>
@@ -180,15 +173,15 @@
                         </div>
                 </a>
                 </li>
-            </ul>
         </ul>
+    </ul>
         <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
         <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
     </div>
     </div>
-  </nav>
+</nav>
 
     <div id="cover-search"></div>
 
@@ -198,28 +191,32 @@
 
   <div class="container mantencion-caja">
     <h1 style="color: white;">
-        <br>
+      <br>
         Servicio
     </h1>
     <ul class="list-group">
       <li class="list-group-item">
         <br>
-        <h2>Mantención Frenos</h2><hr><br>
-        <h5 class="mb-3">Inspección de Pastillas de Freno:</h5>
-        <p class="mb-0">Las pastillas de freno son componentes críticos que se desgastan con el uso y deben ser reemplazadas periódicamente para garantizar un frenado efectivo. Es importante inspeccionar las pastillas de freno en busca de desgaste excesivo, indicador de desgaste o daños, y reemplazarlas si es necesario.</p>
+        <h2>Mantención Motor</h2><hr><br>
+        <h5 class="mb-3">Cambio de filtro de aceite:</h5>
+        <p class="mb-0">Esto es crucial para mantener la lubricación adecuada del motor y prolongar su vida útil. El aceite limpio ayuda a reducir el desgaste de las piezas internas del motor y a mantenerlo funcionando de manera óptima.
       </li>
       <li class="list-group-item">
-        <h5 class="mb-3">Inspección de Discos de Frenos:</h5>
-        <p class="mb-0">Los discos de freno están sujetos a desgaste y deformaciones con el uso prolongado. Es importante inspeccionar los discos de freno en busca de surcos profundos, grietas o deformaciones, y reemplazarlos si es necesario
+        <h5 class="mb-3">Revisión y ajuste de las correas de transmisión:</h5>
+        <p class="mb-0">Las correas de transmisión desgastadas o mal ajustadas pueden causar problemas graves, como la pérdida de potencia del motor o la falla de componentes importantes. Es importante verificar regularmente su estado y ajustarlas según sea necesario.
         </p>
       </li>
       <li class="list-group-item">
-        <h5 class="mb-3">Ajuste del Nivel de Líquido de Frenos:</h5>
-        <p class="mb-0">El líquido de frenos es esencial para transmitir la fuerza del pedal del freno a las pastillas y discos. Es importante verificar el nivel de líquido de frenos de manera regular y rellenarlo si es necesario. También se recomienda reemplazar el líquido de frenos periódicamente según las especificaciones del fabricante.
+        <h5 class="mb-3">Inspección y/o cambio de las bujías:</h5>
+        <p class="mb-0">Las bujías desgastadas pueden provocar una combustión ineficiente, lo que afecta el rendimiento del motor y aumenta el consumo de combustible. Reemplazarlas según el intervalo recomendado ayuda a mantener el motor funcionando suavemente.
       </li>
       <li class="list-group-item">
         <h5 class="mb-3">Revisión y ajuste del sistema de frenos:</h5>
         <p class="mb-0">Un sistema de frenos en buen estado es fundamental para la seguridad del vehículo. Verificar regularmente el estado de las pastillas, discos y líquido de frenos, así como el funcionamiento adecuado del sistema, ayuda a prevenir accidentes y garantiza un frenado eficiente.
+      </li>
+      <li class="list-group-item">
+        <h5 class="mb-3">Inspección del sistema de escape en busca de fugas o daños:</h5>
+        <p class="mb-0">Un escape en mal estado puede afectar la eficiencia del motor y aumentar las emisiones contaminantes. Es importante inspeccionar regularmente el sistema de escape en busca de fugas, grietas o daños, y repararlos o reemplazarlos según sea necesario.
       </li>
     </ul>
   </div>
@@ -234,8 +231,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="javascript.js"></script> 
-  <script>
+    <script src="javascript.js"></script> 
+    <script>
       document.addEventListener("DOMContentLoaded", function() {
         // Selección de los elementos de submenú de categoría
         const dropdownSubmenus = document.querySelectorAll('.dropdown-submenu');
@@ -314,7 +311,6 @@
           });
       }
   });
-  
-</script>
+  </script>
 </body>
 </html>
