--- a/minicooperlog.html
+++ b/minicooperlog.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Supra</title>
+  <title>MiniCooper</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
   <style>
     body {
@@ -62,15 +62,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                  <i class="fa-solid fa-house"></i>
-                  <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="indexusuario.html">
+            <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
+                <i class="fa-solid fa-house"></i>
+                <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+            </div>
             </a>
-          </li>
-          <li class="nav-item dropdown">
+        </li>
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-rectangle-list"></i>
@@ -84,104 +84,104 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mantencionMotor.html">
+                <a class="dropdown-item" href="mantencionMotorlog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-gauge-simple-high"></i>
-                      <span class="ms-2">Motor</span>
+                    <i class="fa-solid fa-gauge-simple-high"></i>
+                    <span class="ms-2">Motor</span>
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionFrenos.html">
+                <a class="dropdown-item" href="mantencionFrenoslog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-car-burst"></i>
-                      <span class="ms-2">Frenos</span> 
+                    <i class="fa-solid fa-car-burst"></i>
+                    <span class="ms-2">Frenos</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionTransmision.html">
+                <a class="dropdown-item" href="mantencionTransmisionlog.html">
                     <div>
-                      <i class="fa-solid fa-oil-can"></i>
-                      <span class="ms-2">Transmisión</span>
+                    <i class="fa-solid fa-oil-can"></i>
+                    <span class="ms-2">Transmisión</span>
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
-          <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-screwdriver-wrench"></i>
-              Mecánicos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+            </ul>
+        </li>
+        <li class="dropdown-submenu">
+            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            Mecánicos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mecanico1.html">
+                <a class="dropdown-item" href="mecanico1log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Marcelo  Pino</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico2.html">
+                <a class="dropdown-item" href="mecanico2log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Daniel Álvarez</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico3.html">
+                <a class="dropdown-item" href="mecanico3log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Carlos Echeverría</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
+            </ul>
+        </li>
         </ul>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">
-              <div class="d-flex align-items-center"> 
-                  <i class="fa-solid fa-message"></i>
-                  <span class="ms-2">Contacto</span> 
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="contactolog.html">
+            <div class="d-flex align-items-center"> 
+                <i class="fa-solid fa-message"></i>
+                <span class="ms-2">Contacto</span> 
+            </div>
             </a>
-          </li>
+        </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user"></i>
-            Cuenta
+            Usuario
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
-              <li>
-                <a class="dropdown-item" href="login.html">
-                  <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-circle-user"></i>
-                    <span class="ms-2">Iniciar Sesión</span> 
-                  </div>
+                <li>
+                <a class="dropdown-item" href="perfil.html">
+                    <div class="d-flex align-items-center">
+                    <i class="fa-solid fa-address-card"></i>
+                    <span class="ms-2">Perfil</span> 
+                    </div>
                 </a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="login.html">
-                  <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-user-plus"></i>
-                    <span class="ms-2">Registrarse</span> 
-                  </div>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="index.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        <span class="ms-2">Cerrar Sesión</span> 
+                        </div>
                 </a>
-              </li>
-            </ul>
+                </li>
         </ul>
+    </ul>
         <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
         <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
     </div>
     </div>
-  </nav>
+</nav>
 
 <div id="cover-search"></div>
   <video autoplay muted loop id="videoFondo">
@@ -190,42 +190,29 @@
 
   <div class="container mantencion-caja">
     <h1 style="color: white;">
-        Supra MK V: Mantención Motor
+      MiniCooper: Mantención Caja de cambios
     </h1>
     <ul class="list-group">
       <li class="list-group-item">
-          <h2>Información Personal</h2><br>
+        <h2>Mecánico a Cargo: Daniel Álvarez</h2><hr><br>
+        <h5 class="mb-3">Inspección del Nivel de Aceite de la Caja de Cambios:</h5>
+        <p class="mb-0">Es crucial verificar el nivel de aceite de la caja de cambios de manera regular para asegurar una lubricación adecuada y prolongar la vida útil de la transmisión. El nivel de aceite debe estar dentro del rango recomendado por el fabricante del vehículo.</p>
       </li>
       <li class="list-group-item">
-        <div class="mt-3 text-center">
-          <div class="image-container">
-              <label for="perfil">
-                  <img src="ruta_de_la_imagen" alt="Imagen de perfil" width="120" height="120">
-                  <input type="file" id="perfil" name="perfil" accept="image/*" style="display: none;">
-              </label>
-          </div>
-      </div>
-      
+        <h5 class="mb-3">Inspección del Estado del Aceite de la Caja de Cambios:</h5>
+        <p class="mb-0">El aceite de la caja de cambios se degrada con el tiempo y el uso, perdiendo sus propiedades lubricantes y protectoras. Es importante inspeccionar regularmente el estado del aceite, buscando cambios de color, olor o presencia de partículas metálicas, lo que podría indicar la necesidad de un cambio de aceite.
+        </p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Nombre de Usuario:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Ajuste del Embrague:</h5>
+        <p class="mb-0">Un embrague correctamente ajustado es esencial para una conducción suave y eficiente. El ajuste del embrague implica verificar y ajustar el recorrido del pedal del embrague, el punto de acoplamiento y la tensión del cable o sistema hidráulico.</p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Correo Electrónico:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Inspección de los Sellos de la Caja de Cambios:</h5>
+        <p class="mb-0">Los sellos de la caja de cambios evitan fugas de aceite que pueden dañar la transmisión y reducir el nivel de aceite. Es importante inspeccionar regularmente los sellos en busca de signos de desgaste, grietas o daños, y reemplazarlos si es necesario.</p>
       </li>
-      <li class="list-group-item">
-          <h5 class="mb-3">Edad:</h5> 
-          <p class="mb-0"></p>
-      </li>
-      <li class="list-group-item">
-          <h5 class="mb-3">Bio</h5>
-          <input class="form-control me-2" type="text" maxlength="200">
-          <p class="mb-0"></p>
-      </li>
-  </ul>
-</div>
+    </ul>
+  </div>
   <footer class="footer mt-auto py-3">
     <div class="container text-center">
       <span class="text-muted">© 2024 Taller Mecánico "RAYO MAKWEEN" Todos los derechos reservados.</span>
@@ -266,55 +253,55 @@
   });
 </script>
 <script>
-document.addEventListener("DOMContentLoaded", function() {
-const searchInput = document.querySelector('.form-control');
-const boxSearch = document.getElementById('box-search');
+    document.addEventListener("DOMContentLoaded", function() {
+    const searchInput = document.querySelector('.form-control');
+    const boxSearch = document.getElementById('box-search');
 
-if (searchInput && boxSearch) {
-    const items = boxSearch.querySelectorAll('li');
+    if (searchInput && boxSearch) {
+        const items = boxSearch.querySelectorAll('li');
 
-    searchInput.addEventListener('input', function(event) {
-        const searchText = event.target.value.trim().toLowerCase();
+        searchInput.addEventListener('input', function(event) {
+            const searchText = event.target.value.trim().toLowerCase();
 
-        let hasResults = false;
+            let hasResults = false;
 
-        items.forEach(function(item) {
-            const text = item.textContent.trim().toLowerCase();
+            items.forEach(function(item) {
+                const text = item.textContent.trim().toLowerCase();
 
-            if (text.includes(searchText)) {
-                item.style.display = 'block';
-                hasResults = true;
+                if (text.includes(searchText)) {
+                    item.style.display = 'block';
+                    hasResults = true;
+                } else {
+                    item.style.display = 'none';
+                }
+            });
+
+            if (hasResults || searchText.length === 0) {
+                boxSearch.style.display = 'block';
             } else {
-                item.style.display = 'none';
+                boxSearch.style.display = 'none';
             }
         });
 
-        if (hasResults || searchText.length === 0) {
-            boxSearch.style.display = 'block';
-        } else {
-            boxSearch.style.display = 'none';
-        }
-    });
+        searchInput.addEventListener('focus', function() {
+            if (searchInput.value.trim().length > 0) {
+                boxSearch.style.display = 'block';
+            }
+        });
 
-    searchInput.addEventListener('focus', function() {
-        if (searchInput.value.trim().length > 0) {
-            boxSearch.style.display = 'block';
-        }
-    });
+        searchInput.addEventListener('blur', function() {
+            // Espera 200 milisegundos para asegurarse de que el clic en la lista de sugerencias se maneje antes de ocultarla
+            setTimeout(function() {
+                boxSearch.style.display = 'none';
+            }, 200);
+        });
 
-    searchInput.addEventListener('blur', function() {
-        // Espera 200 milisegundos para asegurarse de que el clic en la lista de sugerencias se maneje antes de ocultarla
-        setTimeout(function() {
-            boxSearch.style.display = 'none';
-        }, 200);
-    });
-
-    document.addEventListener('click', function(event) {
-        if (!boxSearch.contains(event.target) && event.target !== searchInput) {
-            boxSearch.style.display = 'none';
-        }
-    });
-}
+        document.addEventListener('click', function(event) {
+            if (!boxSearch.contains(event.target) && event.target !== searchInput) {
+                boxSearch.style.display = 'none';
+            }
+        });
+    }
 });
 </script>
 </body>
