--- a/mustanglog.html
+++ b/mustanglog.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Supra</title>
+  <title>MiniCooper</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
-  <style>
+<style>
     body {
       display: flex;
       flex-direction: column;
@@ -47,7 +47,7 @@
       display: none; /* Ocultar inicialmente */
   }
 
-  </style>
+</style>
 </head>
 
 <body>
@@ -62,15 +62,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                  <i class="fa-solid fa-house"></i>
-                  <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="indexusuario.html">
+            <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
+                <i class="fa-solid fa-house"></i>
+                <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+            </div>
             </a>
-          </li>
-          <li class="nav-item dropdown">
+        </li>
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-rectangle-list"></i>
@@ -84,104 +84,104 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mantencionMotor.html">
+                <a class="dropdown-item" href="mantencionMotorlog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-gauge-simple-high"></i>
-                      <span class="ms-2">Motor</span>
+                    <i class="fa-solid fa-gauge-simple-high"></i>
+                    <span class="ms-2">Motor</span>
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionFrenos.html">
+                <a class="dropdown-item" href="mantencionFrenoslog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-car-burst"></i>
-                      <span class="ms-2">Frenos</span> 
+                    <i class="fa-solid fa-car-burst"></i>
+                    <span class="ms-2">Frenos</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionTransmision.html">
+                <a class="dropdown-item" href="mantencionTransmisionlog.html">
                     <div>
-                      <i class="fa-solid fa-oil-can"></i>
-                      <span class="ms-2">Transmisión</span>
+                    <i class="fa-solid fa-oil-can"></i>
+                    <span class="ms-2">Transmisión</span>
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
-          <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-screwdriver-wrench"></i>
-              Mecánicos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+            </ul>
+        </li>
+        <li class="dropdown-submenu">
+            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            Mecánicos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mecanico1.html">
+                <a class="dropdown-item" href="mecanico1log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Marcelo  Pino</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico2.html">
+                <a class="dropdown-item" href="mecanico2log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Daniel Álvarez</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico3.html">
+                <a class="dropdown-item" href="mecanico3log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Carlos Echeverría</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
+            </ul>
+        </li>
         </ul>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">
-              <div class="d-flex align-items-center"> 
-                  <i class="fa-solid fa-message"></i>
-                  <span class="ms-2">Contacto</span> 
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="contactolog.html">
+            <div class="d-flex align-items-center"> 
+                <i class="fa-solid fa-message"></i>
+                <span class="ms-2">Contacto</span> 
+            </div>
             </a>
-          </li>
+        </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user"></i>
-            Cuenta
+            Usuario
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
-              <li>
-                <a class="dropdown-item" href="login.html">
-                  <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-circle-user"></i>
-                    <span class="ms-2">Iniciar Sesión</span> 
-                  </div>
+                <li>
+                <a class="dropdown-item" href="perfil.html">
+                    <div class="d-flex align-items-center">
+                    <i class="fa-solid fa-address-card"></i>
+                    <span class="ms-2">Perfil</span> 
+                    </div>
                 </a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="login.html">
-                  <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-user-plus"></i>
-                    <span class="ms-2">Registrarse</span> 
-                  </div>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="index.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        <span class="ms-2">Cerrar Sesión</span> 
+                        </div>
                 </a>
-              </li>
-            </ul>
+                </li>
         </ul>
+    </ul>
         <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
         <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
     </div>
     </div>
-  </nav>
+</nav>
 
 <div id="cover-search"></div>
   <video autoplay muted loop id="videoFondo">
@@ -190,42 +190,29 @@
 
   <div class="container mantencion-caja">
     <h1 style="color: white;">
-        Supra MK V: Mantención Motor
+      Mustang GT500: Mantención Frenos
     </h1>
     <ul class="list-group">
       <li class="list-group-item">
-          <h2>Información Personal</h2><br>
+        <h2>Mecánico a Cargo: Marcelo Pino</h2><hr><br>
+        <h5 class="mb-3">Inspección de Pastillas de Freno:</h5>
+        <p class="mb-0">Las pastillas de freno son componentes críticos que se desgastan con el uso y deben ser reemplazadas periódicamente para garantizar un frenado efectivo. Es importante inspeccionar las pastillas de freno en busca de desgaste excesivo, indicador de desgaste o daños, y reemplazarlas si es necesario.</p>
       </li>
       <li class="list-group-item">
-        <div class="mt-3 text-center">
-          <div class="image-container">
-              <label for="perfil">
-                  <img src="ruta_de_la_imagen" alt="Imagen de perfil" width="120" height="120">
-                  <input type="file" id="perfil" name="perfil" accept="image/*" style="display: none;">
-              </label>
-          </div>
-      </div>
-      
+        <h5 class="mb-3">Inspección de Discos de Frenos:</h5>
+        <p class="mb-0">Los discos de freno están sujetos a desgaste y deformaciones con el uso prolongado. Es importante inspeccionar los discos de freno en busca de surcos profundos, grietas o deformaciones, y reemplazarlos si es necesario
+        </p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Nombre de Usuario:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Ajuste del Nivel de Líquido de Frenos:</h5>
+        <p class="mb-0">El líquido de frenos es esencial para transmitir la fuerza del pedal del freno a las pastillas y discos. Es importante verificar el nivel de líquido de frenos de manera regular y rellenarlo si es necesario. También se recomienda reemplazar el líquido de frenos periódicamente según las especificaciones del fabricante.
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Correo Electrónico:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Revisión y ajuste del sistema de frenos:</h5>
+        <p class="mb-0">Un sistema de frenos en buen estado es fundamental para la seguridad del vehículo. Verificar regularmente el estado de las pastillas, discos y líquido de frenos, así como el funcionamiento adecuado del sistema, ayuda a prevenir accidentes y garantiza un frenado eficiente.
       </li>
-      <li class="list-group-item">
-          <h5 class="mb-3">Edad:</h5> 
-          <p class="mb-0"></p>
-      </li>
-      <li class="list-group-item">
-          <h5 class="mb-3">Bio</h5>
-          <input class="form-control me-2" type="text" maxlength="200">
-          <p class="mb-0"></p>
-      </li>
-  </ul>
-</div>
+    </ul>
+  </div>
   <footer class="footer mt-auto py-3">
     <div class="container text-center">
       <span class="text-muted">© 2024 Taller Mecánico "RAYO MAKWEEN" Todos los derechos reservados.</span>
