--- a/perfil.html
+++ b/perfil.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Supra</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Perfil de Usuario</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <style>
+<script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="style.css">
+<style>
     body {
       display: flex;
       flex-direction: column;
@@ -62,15 +62,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
-                  <i class="fa-solid fa-house"></i>
-                  <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="indexusuario.html">
+            <div class="d-flex align-items-center"> <!-- Nuevo: Contenedor para el ícono y el texto -->
+                <i class="fa-solid fa-house"></i>
+                <span class="ms-2">Inicio</span> <!-- Cambio: Añadir un margen a la izquierda -->
+            </div>
             </a>
-          </li>
-          <li class="nav-item dropdown">
+        </li>
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownServicios" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-rectangle-list"></i>
@@ -84,148 +84,162 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mantencionMotor.html">
+                <a class="dropdown-item" href="mantencionMotorlog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-gauge-simple-high"></i>
-                      <span class="ms-2">Motor</span>
+                    <i class="fa-solid fa-gauge-simple-high"></i>
+                    <span class="ms-2">Motor</span>
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionFrenos.html">
+                <a class="dropdown-item" href="mantencionFrenoslog.html">
                     <div class="d-flex align-items-center">
-                      <i class="fa-solid fa-car-burst"></i>
-                      <span class="ms-2">Frenos</span> 
+                    <i class="fa-solid fa-car-burst"></i>
+                    <span class="ms-2">Frenos</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mantencionTransmision.html">
+                <a class="dropdown-item" href="mantencionTransmisionlog.html">
                     <div>
-                      <i class="fa-solid fa-oil-can"></i>
-                      <span class="ms-2">Transmisión</span>
+                    <i class="fa-solid fa-oil-can"></i>
+                    <span class="ms-2">Transmisión</span>
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
-          <li class="dropdown-submenu">
-              <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fa-solid fa-screwdriver-wrench"></i>
-              Mecánicos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
+            </ul>
+        </li>
+        <li class="dropdown-submenu">
+            <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdownCategoria" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            Mecánicos
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategoria">
                 <li>
-                  <a class="dropdown-item" href="mecanico1.html">
+                <a class="dropdown-item" href="mecanico1log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Marcelo  Pino</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico2.html">
+                <a class="dropdown-item" href="mecanico2log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Daniel Álvarez</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="mecanico3.html">
+                <a class="dropdown-item" href="mecanico3log.html">
                     <div class="d-flex align-items-center"> 
                         <i class="fa-solid fa-user"></i>
                         <span class="ms-2">Carlos Echeverría</span> 
                     </div>
-                  </a>
+                </a>
                 </li>
-              </ul>
-          </li>
+            </ul>
+        </li>
         </ul>
-          <li class="nav-item">
-            <a class="nav-link" href="contacto.html">
-              <div class="d-flex align-items-center"> 
-                  <i class="fa-solid fa-message"></i>
-                  <span class="ms-2">Contacto</span> 
-              </div>
+        <li class="nav-item">
+            <a class="nav-link" href="contactolog.html">
+            <div class="d-flex align-items-center"> 
+                <i class="fa-solid fa-message"></i>
+                <span class="ms-2">Contacto</span> 
+            </div>
             </a>
-          </li>
+        </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCuenta" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user"></i>
-            Cuenta
+            Usuario
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownCuenta">
-              <li>
-                <a class="dropdown-item" href="login.html">
-                  <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-circle-user"></i>
-                    <span class="ms-2">Iniciar Sesión</span> 
-                  </div>
+                <li>
+                <a class="dropdown-item" href="perfil.html">
+                    <div class="d-flex align-items-center">
+                    <i class="fa-solid fa-address-card"></i>
+                    <span class="ms-2">Perfil</span> 
+                    </div>
                 </a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="login.html">
-                  <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-user-plus"></i>
-                    <span class="ms-2">Registrarse</span> 
-                  </div>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="index.html">
+                        <div class="d-flex align-items-center">
+                        <i class="fa-solid fa-right-from-bracket"></i>
+                        <span class="ms-2">Cerrar Sesión</span> 
+                        </div>
                 </a>
-              </li>
-            </ul>
+                </li>
         </ul>
+    </ul>
         <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
         <button class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
     </div>
     </div>
-  </nav>
+</nav>
 
 <div id="cover-search"></div>
   <video autoplay muted loop id="videoFondo">
     <source src="img/motor.mp4" type="video/mp4">
   </video>
-
   <div class="container mantencion-caja">
+    <br>
     <h1 style="color: white;">
-        Supra MK V: Mantención Motor
+        Perfil de Usuario
     </h1>
+    <br>
     <ul class="list-group">
       <li class="list-group-item">
-          <h2>Información Personal</h2><br>
+        <h2>Información Personal</h2><br>
       </li>
       <li class="list-group-item">
-        <div class="mt-3 text-center">
-          <div class="image-container">
-              <label for="perfil">
-                  <img src="ruta_de_la_imagen" alt="Imagen de perfil" width="120" height="120">
-                  <input type="file" id="perfil" name="perfil" accept="image/*" style="display: none;">
-              </label>
-          </div>
-      </div>
-      
+        <div class="mt-3 d-inline-block position-relative image-upload-container">
+            <label for="perfil" style="display: block; text-align: center;">Imagen de Perfil:</label>
+            <div class="input-group">
+                <input type="file" class="form-control" id="perfil" name="perfil" accept="image/*">
+            </div>            
+        </div>              
+    </li>
+      <li class="list-group-item">
+        <h5 class="mb-3">Nombre de Usuario:</h5>
+        <p class="mb-0">
+        </p>
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Nombre de Usuario:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Correo Electrónico:</h5>
+        <p class="mb-0">
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Correo Electrónico:</h5>
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Edad:</h5> 
+        <p class="mb-0">
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Edad:</h5> 
-          <p class="mb-0"></p>
+        <h5 class="mb-3">Bio</h5>
+        <input class="form-control me-2" type="text" maxlength="200">
+        <p class="mb-0">
       </li>
       <li class="list-group-item">
-          <h5 class="mb-3">Bio</h5>
-          <input class="form-control me-2" type="text" maxlength="200">
-          <p class="mb-0"></p>
+        <h2>Cambiar Contraseña</h2><br>
       </li>
-  </ul>
-</div>
+      <li class="list-group-item">
+        <h5 class="mb-3">Contraseña Nueva:</h5>
+        <input class="form-contro2 me-2" type="text" minlength="4" maxlength="16">
+      </li>
+      <li class="list-group-item">
+        <h5 class="mb-3">Confirmar Contraseña:</h5>
+        <input class="form-contro2 me-2" type="text" minlength="4" maxlength="16">
+      </li>
+      <li class="list-group-item text-center">
+        <button type="submit" class="btn btn-primary d-inline-block">Guardar Cambios</button>
+    </li>
+    </ul>
+  </div>
+  <br>
   <footer class="footer mt-auto py-3">
     <div class="container text-center">
       <span class="text-muted">© 2024 Taller Mecánico "RAYO MAKWEEN" Todos los derechos reservados.</span>
